--- a/stories/ai-takes-over.html
+++ b/stories/ai-takes-over.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevDaily - AI Takes Over</title>
+    <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" type="text/css" href="../css/style-answer.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/style-answer.css" /> -->
+
 
 </head>
 
 <body>
 
-    <div class="header module">
+    <header class="module">
 
         <div class="container">
 
@@ -40,7 +42,7 @@
 
         </div>
 
-    </div>
+    </header>
 
     <div class="breadcrumbs">
 
@@ -52,7 +54,7 @@
 
     </div>
 
-    <div class="main module">
+    <main class="module">
 
         <div class="container">
 
@@ -123,9 +125,9 @@
 
         </div>
 
-    </div>
+    </main>
 
-    <div class="footer module">
+    <footer class="module">
 
         <div class="container">
 
@@ -133,7 +135,7 @@
 
         </div>
 
-    </div>
+    </footer>
 
 </body>
 </html>
