--- a/stories/ai-takes-over.html
+++ b/stories/ai-takes-over.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevDaily - AI Takes Over</title>
-    <link rel="stylesheet" href="style.css">
 
     <!-- <link rel="stylesheet" type="text/css" href="../css/style-answer.css" /> -->
 
@@ -58,7 +57,7 @@
 
         <div class="container">
 
-            <div class="main-article">
+            <article>
 
                 <div class="main-article_cover">
 
@@ -121,7 +120,7 @@
 
                 </div>
 
-            </div>
+            </article>
 
         </div>
 
