--- a/stories/ai-takes-over.html
+++ b/stories/ai-takes-over.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevDaily - AI Takes Over</title>
+    <link rel="stylesheet" href="aistyle.css">
 
     <!-- <link rel="stylesheet" type="text/css" href="../css/style-answer.css" /> -->
 
@@ -55,7 +56,7 @@
 
     <main class="module">
 
-        <div class="container">
+        <div class="container-one">
 
             <article>
 
